--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -3,6 +3,7 @@
         <title>
             Article One | Mitanshu Khurana
         </title>
+        <meta name = "viewport" content="width = device-width, initial-scale = 1" />
     </head>
     <Body>
         <div>
