--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -1,1 +1,32 @@
+<html>
+    <head>
+        <title>
+            Article One | Mitanshu Khurana
+        </title>
+        <meta name = "viewport" content="width = device-width, initial-scale = 1" />
+    </head>
+    <Body>
+        <div>
+            <a href = "/">Home</a>
+        </div>
+        <hr>
+        <h3>
+            Article One
+        </h3>
+        <div>
+            Feb 26, 2018
+        </div>
+        <div>
+            <p>
+                This is the content for my first article. This is the content for my first article. This is the content for my first article. This is the content for my first article. This is the content for my first article. This is the content for my first article. This is the content for my first article.
+            </p>
+            <p>
+                This is the content for my first article. This is the content for my first article. This is the content for my first article. This is the content for my first article. This is the content for my first article. This is the content for my first article. This is the content for my first article.
+            </p>
+            <p>
+                This is the content for my first article. This is the content for my first article. This is the content for my first article. This is the content for my first article. This is the content for my first article. This is the content for my first article. This is the content for my first article.
+            </p>
+        </div>
+    </Body>
+</html>
 
