--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -4,8 +4,10 @@
             Article Two | Mitanshu Khurana
         </title>
         <meta name = "viewport" content="width = device-width, initial-scale = 1" />
+        <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <Body>
+        <div class="container">
         <div>
             <a href = "/">Home</a>
         </div>
@@ -26,6 +28,7 @@
             <p>
                 This is the content for my first article. This is the content for my first article. This is the content for my first article. This is the content for my first article. This is the content for my first article. This is the content for my first article. This is the content for my first article.
             </p>
+        </div>
         </div>
     </Body>
 </html>
