--- a/ui/index.html
+++ b/ui/index.html
@@ -4,14 +4,24 @@
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
-        <div class="center">
-            <img id = "madi" src="/ui/madi.png" class="img-medium"/>
-        </div>
-        <br>
-        <div id = 'main-text' class="center text-big bold">
-            Hi! I am Mitanshu and this is my first Webapp.
-		<h1>This a new heading</h1>
-	   I have made some new local changes.
+        <div class = "container">
+            <div class="center">
+                <img id = "madi" src="/ui/madi.png" class="img-medium"/>
+            </div>
+            <hr>
+            <h3>Personal</h3>
+            <div>
+                Hi! My name is Mitanshu Khurana.
+            </div>
+            <hr/>
+            <h3>Professional</h3>
+            <div>
+                I really don't work.
+            </div>
+            <hr/>
+            <div class = "footer">
+                
+            </div>
         </div>
         <script>
             alert('Hi! I am javascript')
