[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -20,7 +20,7 @@
             </div>
             <hr/>
             <div class = "footer">
-                
+                This button <button> Click Me!</button> has been clicked <span> 0 </span> times.
             </div>
         </div>
         <script>
