--- a/ui/index.html
+++ b/ui/index.html
@@ -20,11 +20,14 @@
             </div>
             <hr/>
             <div class = "footer">
-                This button <button> Click Me!</button> has been clicked <span> 0 </span> times.
+                This button <button onclick = count()> Click Me!</button> has been clicked <span id='counter'> 0 </span> times.
             </div>
         </div>
         <script>
-            alert('Hi! I am javascript')
+        count = 0;
+            function count() {
+                document.getElementById('counter').innerHTML = count++;
+            }
         </script>
         <script type="text/javascript" src="/ui/main.js">
         </script>
