--- a/ui/index.html
+++ b/ui/index.html
@@ -20,12 +20,12 @@
             </div>
             <hr/>
             <div class = "footer">
-                This button <button onclick = count()> Click Me!</button> has been clicked <span id='counter'> 0 </span> times.
+                This button <button onclick = counts()> Click Me!</button> has been clicked <span id='counter'> 0 </span> times.
             </div>
         </div>
         <script>
         count = 0;
-            function count() {
+            function counts() {
                 document.getElementById('counter').innerHTML = count++;
             }
         </script>
