--- a/ui/index.html
+++ b/ui/index.html
@@ -20,15 +20,9 @@
             </div>
             <hr/>
             <div class = "footer">
-                This button <button onclick = counts()> Click Me!</button> has been clicked <span id='counter'> 0 </span> times.
+                This button <button id = "counter"> Click Me!</button> has been clicked <span id = "count"> 0 </span>
             </div>
         </div>
-        <script>
-        count = 0;
-            function counts() {
-                document.getElementById('counter').innerHTML = count++;
-            }
-        </script>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
