[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -21,13 +21,10 @@
             <hr/>
             <div class = "footer">
                 This button <button id = "counter"> Click Me!</button> has been clicked <span id = "count"> 0 </span>
-                <br>
+                <hr/>
                 <input type='text' id = "name" placeholder = "Name"/>
-                <input type="submit" value="Submit"/>
-                <ul>
-                    <li>Name1</li>
-                    <li>Name2</li>
-                    <li>Name3</li>
+                <input type="submit" value="Submit" id="submit_btn" D/>
+                <ul id="namelist">
                 </ul>
             </div>
         </div>
