[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -23,7 +23,7 @@
                 This button <button id = "counter"> Click Me!</button> has been clicked <span id = "count"> 0 </span>
                 <hr/>
                 <input type='text' id = "name" placeholder = "Name"/>
-                <input type="submit" value="Submit" id="submit_btn" D/>
+                <input type="submit" value="Submit" id="submit_btn" />
                 <ul id="namelist">
                 </ul>
             </div>
