--- a/ui/index.html
+++ b/ui/index.html
@@ -25,6 +25,7 @@
                 <input type='text' id = "name" placeholder = "Name"/>
                 <input type="submit" value="Submit" id="submit_btn" />
                 <ul id="namelist">
+                    <li>sdfasd</li>
                 </ul>
             </div>
         </div>
